--- a/AC14HTML -day01/01.html
+++ b/AC14HTML -day01/01.html
@@ -39,31 +39,39 @@
         <img src="../pic001.jpg" width="200" alt="">
     </picture>
 
-    <table>
+<!-- 表格 -->
+    <!-- 如果沒有border 跟 width會看不到     
+         thead 跟 tbody 跟 tfoot
+    -->
+    <table border="3" width="400">
         <thead>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th>科目</th>
+                <th>國文</th>
+                <th>英文</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th>小明</th>
+                <td>ddd</td>
+                <td>ddd</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th>小華</th>
+                <td>ddd</td>
+                <td>ddd</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th>備註</th>
+                <td colspan="2">2</td>
+            </tr>
+            <tr>
+                <th>備註</th>
+                <td>ddd</td>
+                <td>ddd</td>
             </tr>
         </tfoot>
 
