--- a/AC14HTML -day04/0612作業.html
+++ b/AC14HTML -day04/0612作業.html
@@ -45,21 +45,32 @@
         position: fixed;
         top: 0;
     }
-    .bar{
+    nav .bar{
         display: flex;
         justify-content: space-between;
-        padding: 20px;
         box-shadow: 0 10px 15px -3px rgba(113,128,150,0.1),0 4px 6px -2px rgba(113,128,150,0.05);
     }
     nav .logo{
         display: flex;
+        align-items: center;
+        margin-left: 15px;
     }
     nav ul{
         display: flex;
         align-items: center;
     }
     nav ul li{
-        padding: 0 20px;
+        padding: 18px;
+        height: 100%;
+        /* border: 1px solid; */
+        border-bottom: 4px solid  transparent;
+    }
+    nav ul li a{
+        display: block;
+        color: black;
+    }
+    nav ul li:hover{
+        border-bottom: 4px solid #ff133e ;
     }
     .items{
         display: block;
@@ -70,7 +81,7 @@
     .recent-courses{
         background-color: rgb(41, 48, 62);
         border: 1px solid;
-        margin-top: 70px;
+        padding-top: 70px;
     }
     .recent-courses > div{
         width: 960px;
@@ -92,6 +103,7 @@
         border-radius: 8px;
         background-color: white;
         overflow: hidden;
+        cursor: pointer;
         /* border: 1px solid white; */
     }
     .recent-courses .class-item{
@@ -113,18 +125,26 @@
     }
     .recent-courses .more-btn{
         display: flex;
-        margin: 0 auto;
-        margin-top: 10px;
+        /* 因為下面自適應寬度 */
+        width: auto; 
     }
-    .recent-courses .more-btn a{
+    /* 第一種 */
+    /* .recent-courses .more-btn{
+        padding: 12px 32px;
+        margin: auto;
+        background-color: #ff133e;
+        color: white;
+        border-radius: 4px;
         text-align: center;
-        /* display: inline-block;
-        width: 150px; */
+    } */
+    .recent-courses .more-btn{
+        width: fit-content;
         margin: auto;
         padding: 12px 32px;
         background-color: #ff133e;
         color: white;
         border-radius: 4px;
+        text-align: center;
     }
     .other-courses{
         width: 960px;
@@ -136,6 +156,13 @@
         padding: 20px 0;
         font-size: 30px;
         font-weight: 900;
+    }
+    .other-courses h1::after{
+        content: '';
+        display: block;
+        width: 40px;
+        height: 2px;
+        background-color: #ff133e;
     }
     .other-courses .class-list{
         display: flex;
@@ -165,6 +192,12 @@
         margin: 10px 0;
         color: #ff133e;
     }
+    .other-courses .go-icon{
+        margin: 0;
+    }
+    .other-courses .go-icon:hover{
+        margin-left: 10px;
+    }
     </style>
 </head>
 <body>
@@ -173,14 +206,14 @@
         <div class="bar">
             <div class="logo">
                 <img src="logo.svg">
-                <h1><a href="https://5xruby.tw/">五倍紅寶石，專業城市教育機構</a></h1>
+                <h1><a href="https://5xruby.tw/">五倍紅寶石</a></h1>
             </div>
             <ul>
-                <li>ASTRO Camp</li>
-                <li>線上課程</li>
-                <li>實體課程</li>
-                <li>技術文章</li>
-                <li>五倍消息</li>
+                <li><a href="#">ASTRO Camp</a></li>
+                <li><a href="#">線上課程</a></li>
+                <li><a href="#">實體課程</a></li>
+                <li><a href="#">技術文章</a></li>
+                <li><a href="#">五倍消息</a></li>
             </ul>
         </div>
     </nav>
@@ -248,9 +281,12 @@
                     </div>
                 </div>
             </div>
-            <div class="more-btn">
+            <!-- 第一種 外層width:auto 內層margin -->
+            <!-- <div class="more-btn">
                 <a href="#">看更多課程</a>
-            </div>
+            </div> -->
+            <!-- 第一種 一層 width:fit-content margin: auto -->
+            <a href="#" class="more-btn">看更多課程</a>
         </div>
     </section>
     <section class="other-courses">
@@ -267,7 +303,7 @@
                     <h2>線上課程</h2>
                     <p>不限時間、地點，自己掌握學習進度。課程內容包含前後端課程，附加完課即提供免費履歷健檢服務。適合在職、喜歡自己掌握進度的人。
                     </p>
-                    <a href="#" class="go-course">前往課程></a>
+                    <a href="#" class="go-course">前往課程<span class="go-icon">></span></a>
                 </div>
             </div>
             <div class="card">
@@ -283,5 +319,14 @@
             </div>
         </div>
     </section>
+
+    <!-- 作業檢討
+        vertical-align: middle
+        如果不使用上面，寫固定高度
+        圓角 p 439
+        margin auto對自己有用
+        : 
+     -->
+
 </body>
 </html>
