--- a/AC14HTML-day05homework/index.html
+++ b/AC14HTML-day05homework/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>五倍官網練習切版</title>
     <script src="https://kit.fontawesome.com/afbc39fe94.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/afbc39fe94.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./index.css"
@@ -430,7 +430,7 @@
                 </div>
             </div>
         </div>
-        <a class="primary-btn">更多報導</a>
+        <a href="#" class="primary-btn">更多報導</a>
     </section>
 
     <section class="student-comments">
