五倍官網首頁作業 老師已檢討

--- a/AC14HTML-day05homework/index.html
+++ b/AC14HTML-day05homework/index.html
@@ -321,9 +321,11 @@
                             <span class="class-month">2023 / 7月班</span>
                         </div>
                         <p>
-                            <i class="fa-solid fa-user"></i>
-                            <span>講師：廖珀均 (奶綠茶)</span>
-                            <i class="fa-solid fa-medal"></i>
+                            <span>
+                                <i class="fa-solid fa-user"></i>
+                                講師：廖珀均 (奶綠茶)
+                                <i class="fa-solid fa-medal"></i>
+                            </span>
                             <span class="class-degree">進階課程</span>
                         </p>
                     </div>
